added background and text color

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       href="https://inst-fs-sin-prod.inscloudgate.net/thumbnails/5e930805-0d8e-45d6-85a4-4b1d4c11ef03?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzUxMiJ9.eyJpYXQiOjE3MjQxNTk5MjYsInVzZXJfaWQiOiIxMDkzOTAwMDAwMDAwNjU0MjIiLCJyZXNvdXJjZSI6Ii90aHVtYm5haWxzLzVlOTMwODA1LTBkOGUtNDVkNi04NWE0LTRiMWQ0YzExZWYwMyIsImp0aSI6ImRiNjIxNDQ5LTQ1ZTAtNGM3MS05ZWI0LWRmZTNhYmNhM2FiZiIsImhvc3QiOiJqcnUuaW5zdHJ1Y3R1cmUuY29tIiwiZXhwIjoxNzI0MjQ2MzI2fQ.hbeJPR1sx-DsviJsGOla9vESsz-xqnD9gcNxXxUjfMIMdjG94nJFD11uLtfkS9Cl29N9ufzGp11Pb24LW4e74w"
       rel="icon"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>Resume</title>
   </head>
   <body>
